# pdfdancer-client-python

./: .gitignore  .gitmodules  .last-message.txt  .propagate-doc-prompt.md  .propagate-prompt.md  CLAUDE.md  README.md  bug_report_redact_placeholder_paths.md  demo.py  pyproject.toml  release.py  test.py  test.sh
.github/workflows/: ci.yml  daily-tests.yml  release.yml  sdk-backward-compat.yml
docs/: bug-report-clear-path-group-clipping-pageindex.md  openapi.yml
docs/api-schemas/: v0.yml  v1.yml
docs/capabilities/: CLEAR_CLIPPING.md
src/pdfdancer/: __init__.py  _runtime_version.py  _version.py  client_v1.py  exceptions.py  fingerprint.py  image_builder.py  models.py  page_builder.py  paragraph_builder.py  path_builder.py  pdfdancer_v1.py  text_line_builder.py  types.py
src/pdfdancer_python.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_anonymous_token.py  test_clear_path_group_clipping_request.py  test_client_v1.py  test_fingerprint.py  test_models.py  test_openapi_compliance.py  test_paragraph_builder.py  test_path_group_object.py  test_path_models.py  test_pdf_assertions_cm_order.py  test_pdf_object_equality.py  test_rate_limit.py  test_version.py
tests/e2e/: __init__.py  pdf_assertions.py  test_acroform.py  test_bezier_builder.py  test_clear_clipping.py  test_clipping.py  test_context_manager.py  test_form.py  test_form_x_objects.py  test_image.py  test_image_transform.py  test_line.py  test_line_builder.py  test_new_pdf.py  test_page.py  test_paragraph.py  test_path.py  test_path_builder.py  test_path_builder_rectangle.py  test_path_comprehensive.py  test_path_group.py  test_pdfdancer.py  test_rectangle_builder.py  test_redact.py  test_singular_selection.py  test_snapshot.py  test_template_replace.py  test_template_replace_linebreak.py  test_template_replace_reflow_presets.py  (+1 more)
