[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfdancer-client-python"
dynamic = ["version"]
description = "Python client for PDFDancer API"
readme = "README.md"
authors = [
    { name = "The Famous Cat Ltd.", email = "hi@thefamouscat.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "pydantic>=1.8.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "isort>=5.10.0",
    "build>=0.8.0",
    "twine>=4.0.0"
]

[project.urls]
Homepage = "https://www.pdfdancer.com/"
Documentation = "https://www.pdfdancer.com/"
Source = "https://github.com/MenschMachine/pdfdancer-client-python"
Issues = "https://github.com/MenschMachine/pdfdancer-client-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true

[tool.setuptools_scm]
version_file = "src/pdfdancer/_version.py"
fallback_version = "0.0.0.dev0"

[tool.poetry.scripts]
lint = "bash -c 'flake8 src && mypy src'"
format = "bash -c 'black src && isort src'"
